# SemiPRO

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  ENHANCEMENT_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_MODULE_STATUS_REPORT.md  LICENSE  README.md  build_cython.py  build_cython_simple.py  compile_shaders.sh  debug_simulator.py  demo_workflow.py  enhanced_demo.py  integration_test.py  pyproject.toml  real_process_modules_demo.py  requirements.txt  setup.py  show_mosfet_results.py  test_advanced_processes.py  test_all_modules_systematically.py  test_basic_functionality.py  test_complete_integration.py  test_core_functionality.py  test_enhanced_features.py  test_enhanced_physics.py  test_enhanced_visualization.py  test_gui_demo.py  test_implementations.py  test_standalone_app.py  test_ultimate_validation.py
config/: high_temp_oxidation.json  logging.yaml  low_temp_oxidation.json  oxidation_test.json  test_bench_doping_perf_4.json  test_bench_etching_perf_0.json  test_bench_oxidation_perf_2.json  test_comprehensive.json  test_cycle_step_0.json  test_dep_2_barrier_deposition.json  test_dep_3_pattern_etching.json  test_deposition.json  test_deposition_systematic.json  test_doping.json  test_doping_systematic.json  test_etching_systematic.json  test_flow_complex_flow_1.json  test_flow_complex_flow_2.json  test_flow_complex_flow_3.json  test_flow_dual_flow_1.json  test_flow_dual_flow_2.json  test_flow_simple_flow_1.json  test_ga_gen_1.json  test_ga_gen_2.json  test_ga_gen_3.json  test_ga_gen_4.json  test_high_temp.json  test_int_1_thermal_oxidation.json  test_int_2_nitride_deposition.json  test_int_3_boron_implant.json  test_int_4_contact_etch.json  test_int_complex_workflow_0.json  test_int_complex_workflow_1.json  test_int_complex_workflow_2.json  test_int_multi_step_process_0.json  test_int_multi_step_process_1.json  test_int_multi_step_process_2.json  test_int_physics_integration_1.json  test_low_temp.json  test_med_temp.json  (+40 more)
docs/: COMMIT_SUMMARY.md  FINAL_ACHIEVEMENT_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  QUICK_START_GUIDE.md  requirements.txt
docs/reports/: HONEST_ASSESSMENT.md  IMPLEMENTATION_SUMMARY.md
docs/source/: conf.py  index.rst
docs/source/advanced/: index.rst
examples/: complete_mosfet_fabrication.py  multilayer_processing_example.cpp
examples/cpp/: example_deposition.cpp  example_doping.cpp  example_etching.cpp  example_geometry.cpp  example_metallization.cpp  example_oxidation.cpp  example_packaging.cpp  example_photolithography.cpp  example_reliability.cpp  example_thermal.cpp  working_doping_example.cpp
examples/end_to_end/: mosfet_fabrication.py
examples/python/: example_deposition.py  example_doping.py  example_etching.py  example_geometry.py  example_metallization.py  example_oxidation.py  example_packaging.py  example_photolithography.py  example_reliability.py  example_thermal.py
scripts/: build_complete.py  build_cython.py  complete_mosfet_fabrication.py  comprehensive_mosfet_demo.py  comprehensive_real_validation.py  generate_mosfet_visuals.py  generate_visual_validation.py  plot_real_simulation_data.py  run_simulation.py  semipro.py  setup_cython_simple.py  setup_environment.py  setup_simple.py  simple_validation.py  test_all_modules_systematically.py  test_complete_implementation.py  test_integration_validation.py  test_multilayer_processing.py  test_process_integration.py  test_process_optimization.py  test_temperature_control.py  test_temperature_control_simple.py  test_visualization.py  visualize_results.py  working_mosfet_demo.py
src/: __init__.py
src/config/: logging.yaml
src/cpp/: main.cpp
src/cython/: advanced_visualization.cpp  advanced_visualization.pyx  build_single.py  defect_inspection.cpp  defect_inspection.pyx  deposition.cpp  deposition.pyx  doping.cpp  doping.pyx  drc.cpp  drc.pyx  etching.cpp  etching.pyx  geometry.cpp  geometry.pxd  geometry.pyx  interconnect.cpp  interconnect.pyx  metallization.cpp  metallization.pyx  metrology.cpp  metrology.pyx  minimal_test.cpp  minimal_test.pyx  multi_die.cpp  multi_die.pyx  oxidation.cpp  oxidation.pyx  packaging.cpp  packaging.pyx  photolithography.cpp  photolithography.pyx  reliability.cpp  reliability.pyx  renderer.cpp  renderer.pyx  setup.py  setup_minimal.py  setup_new_modules.py  simple_geometry.cpp  (+4 more)
src/python/: __init__.py  cpp_bridge.py  enhanced_bindings.py  gui.py  simulator.py
src/shaders/: wafer.frag  wafer.vert
tests/cpp/: CMakeLists.txt  test_comprehensive.cpp  test_deposition.cpp  test_doping.cpp  test_etching.cpp  test_geometry.cpp  test_metallization.cpp  test_oxidation.cpp  test_packaging.cpp  test_photolithography.cpp  test_reliability.cpp  test_renderer.cpp  test_thermal.cpp  test_wafer.cpp
tests/integration/: test_api_integration.py
tests/python/: requirements.txt  test_deposition.py  test_doping.py  test_etching.py  test_geometry.py  test_metallization.py  test_oxidation.py  test_packaging.py  test_photolithography.py  test_reliability.py  test_thermal.py
tutorials/: CMakeLists.txt  advanced_cython_tutorial.py  comprehensive_cython_tutorial.py  cpp_core_tutorial.cpp  cpp_core_tutorial.md  cython_integration_tutorial.md  cython_integration_tutorial.py  cython_physics_tutorial.py  minimal_cpp_tutorial.cpp  python_frontend_tutorial.md  python_frontend_tutorial.py  simple_cpp_tutorial.cpp
tutorials/cpp/: tutorial_deposition.cpp  tutorial_doping.cpp  tutorial_etching.cpp  tutorial_geometry.cpp  tutorial_metallization.cpp  tutorial_oxidation.cpp  tutorial_packaging.cpp  tutorial_photolithography.cpp  tutorial_reliability.cpp  tutorial_thermal.cpp
tutorials/python/: tutorial_deposition.py  tutorial_doping.py  tutorial_etching.py  tutorial_geometry.py  tutorial_metallization.py  tutorial_oxidation.py  tutorial_packaging.py  tutorial_photolithography.py  tutorial_reliability.py  tutorial_thermal.py
validation_results/: ACTUAL_VALIDATION_REPORT.md  HONEST_VALIDATION_REPORT.json  systematic_test_results.json
validation_results/validation/: validation_summary.md
(+175 files in other folders)
